# Syndeo

./: .gitignore  .pre-commit-config.yaml  README.md  SPDX.spdx  main.py  noxfile.py  pyproject.toml
.devcontainer/: build.py
.github/workflows/: README.md  pre-commit.yml  sphinx.yml
.nox/: .coveragerc  README.md
containers/: miniconda.def  test_container.def
containers/apptainer/: README.md  utils.py
containers/apptainer/templates/: README.md  base.def  miniconda.def
containers/apptainer/tests/: build_test.py  overlay_test.py
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/_static/benchmarks/: bar.html  performance-line-0.html  performance-line-4.html
docs/source/_static/css/: custom.css
docs/source/_static/terminal/: cli_menu.tape  cli_setup.tape  cli_tui.tape
docs/source/pages/: authors.rst  benchmarks.rst  development.rst  installation.rst  overview.rst  pytest.rst  references.rst  troubleshooting.rst  user_guide.rst
docs/source/pages/development/: apptainer.rst  cicd.rst  index.rst  nox.rst
docs/source/pages/development/pytest/: index.rst  integration.rst  python.rst  running_tests.rst  scripts.rst
docs/source/pages/pytest/: allure.rst  coverage.rst  index.rst  summary.rst
src/ci/: utils.py
src/scripts/: cleanup.sh  input_parser.sh  setup_ray_head.sh  setup_ray_workers.sh  shutdown_ray.sh
src/templates/: template_cpu.sh  template_gpu.sh  template_head.sh
src/validation/: nodes.py
tests/: README.md  basic_test.py  cartpole_test.py  cli_test.py  ip_test.py  multi_partition_test.py
tests/python/: README.md  basic_test.py  cartpole_test.py  ip_test.py  utils_test.py
tests/scripts/: README.md  basic_cpu_test.sh  basic_gpu_test.sh  cartpole_container_test.sh  cartpole_cpu_test.sh  cartpole_gpu_test.sh  ip_container_test.sh  ip_cpu_test.sh  ip_gpu_test.sh  multi_partition_head_test.sh  multi_partition_script.sh  multi_partition_workers_cpu_test.sh  multi_partition_workers_gpu_test.sh
